frontend/css/flappy.css
@charset "utf-8";

#gameBox {
    position: relative;
    height: 480px;
    width: 640px;
    border: 1px solid black;
    margin: 0 auto;
    overflow: hidden;
    background-image: url(../images/background.png);
}

#background {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -1;
}

#bird {
    position: absolute;
    width: 31px;
    height: 26px;
    z-index: 2;
}

#gameOver{
    position: inherit;
    left: 40%;
    top: 46%;
    text-align: center;
    font-size: 18px;
}
#getReady {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: none;
}

.obstacleTop, .obstacleBottom {
    position: absolute;
    background: #00000000;
    background-size: 50px 290px;
    width: 50px;
    z-index: 1;
}

.obstacleTop {
    background-image: url(../images/Pipes/top.png);
    transform: rotate(180deg);
}

.obstacleBottom {
    background-image: url(../images/Pipes/bottom.png);
}

#medalBox {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black */
    z-index: 1000; /* this should be higher than the z-index of any other element on the page */
    display: flex;
    justify-content: center;
    align-items: center;
}

#medalContainer {
    background-color: white;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    margin-top: 30%;
    width: 40%;
    margin-left: 24%;
}

#goldMedal, #silverMedal, #bronzeMedal {
    display: none;
    width: 50px; /* You can adjust this value to change the size of the medals */
    height: 50px; /* You can adjust this value to change the size of the medals */
}

#goldMedal {
    background-image: url(../images/medals/gold.png);
}

#silverMedal {
    background-image: url(../images/medals/silver.png);
}

#bronzeMedal {
    background-image: url(../images/medals/bronze.png);
}

.coin {
    position: absolute;
    background-image: url(../images/coin.gif);
    height: 40px;
    width: 40px;
    background-size: 80px 80px;
    background-position: center center;
    z-index: 5;
}

